--- a/quizApp/package.json
+++ b/quizApp/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "core-js": "^3.3.4",
     "handlebars": "^4.5.3",
-    "regenerator-runtime": "^0.13.3"
+    "regenerator-runtime": "^0.13.3",
+    "toastify-js": "^1.7.0"
   }
 }
